<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. Arash Hatami
  -->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="ir.hatamiarash.toast_sample.MainActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingBottom="@dimen/activity_vertical_margin">

		<Button
			android:id="@+id/button_error_toast"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:text="@string/error_toast"/>

		<Button
			android:id="@+id/button_success_toast"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/button_error_toast"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:text="@string/success_toast"/>

		<Button
			android:id="@+id/button_info_toast"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/button_success_toast"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:text="@string/info_toast"/>

		<Button
			android:id="@+id/button_info_toast_with_formatting"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/button_info_toast"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:text="@string/info_toast_with_formatting"/>

		<Button
			android:id="@+id/button_warning_toast"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/button_info_toast_with_formatting"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:text="@string/warning_toast"/>

		<Button
			android:id="@+id/button_normal_toast_wo_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/button_warning_toast"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:text="@string/normal_toast_without_icon"/>

		<Button
			android:id="@+id/button_normal_toast_w_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/button_normal_toast_wo_icon"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:text="@string/normal_toast_with_icon"/>

		<Button
			android:id="@+id/button_custom_config"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/button_normal_toast_w_icon"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:text="@string/custom_configuration"/>

	</RelativeLayout>
</ScrollView>
